# hal-dummy

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
libhal/: Makefile.am  Makefile.in  libhal.c  libhal.h
